# stackgear-ai

./: .dockerignore  .env.example  .gitignore  AI_LOG.md  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
alembic/: env.py
alembic/versions/: b3832a6c831d_create_users_and_hardware_tables.py
app/: main.py  sockets.py
app/core/: config.py  database.py  deps.py  security.py
app/models/: __init__.py  enums.py  hardware.py  user.py
app/routers/: ai.py  auth.py  hardware.py  users.py
app/schemas/: __init__.py  auth.py  hardware.py  user.py
app/setup/: seed.py  seed_hardware.py  seed_users.py
data/: seed_hardware.json
frontend/: .env.production  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/api/: hardware.js  users.js
frontend/src/assets/: modern-ui.css
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: AdminView.vue  AuditView.vue  DashboardView.vue  LoginView.vue
tests/: conftest.py  test_ai_search.py  test_db_config.py  test_rental.py
